--- a/Site/external.css
+++ b/Site/external.css
@@ -1,86 +1,24 @@
 /*---------------Base Styles------------------*/
+body{
+	font-size: 16px;
+	color: grey;
+	background-color: #FFA8BC;
 
-#box{
-	background-color: gray;
-	position: relative;
-  	}
-
-*{
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
 }
 
-h3{
-	font-weight: bold;
-	position: absolute;
-	right: 0;
-	top: 0;
-	height: 35px;
-	width: 100px;
+h1{
+	font-family: Brush Script MT;
 	text-align: center;
-	border: solid black 2px;
-}
- h1{
- 	margin-bottom: 100px;
- 	text-align: center;
- }
-
- div{
- 	padding:50px;
- 	height: 335px;
- 	float: left;
-	margin-left: 20px;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	overflow: auto;
-	border: solid black ;
- }
-
- #red{
- 	background-color: red;
- }
-
- #blue{
- 	background-color: aqua;
- }
-
- #green{
- 	background-color: greenyellow;
- }
-
-
- .ful{
- 	
- }
-
- 
-/*---------------Desktop----------------------*/
-
-@media(min-width: 992px){
-	div{
-		width: 30%;
-
-		
-	}
+	font-size: 80px;
 }
 
-/*---------------Tablet----------------------*/
-@media(min-width: 768px) and (max-width: 991px){
-	div{
-		width:45%;
-		
-	}
-	div.ful{
-	
+#pink{
+	background-color: #FFA8BC;
+	color: grey;
 
- 	width: 92%;
 
- }
 }
-/*---------------phone----------------------*/
-@media(max-width:767px){
-	div{
-		width: 80%;
-	}
+
+#center{
+	text-align: center;
 }
