--- a/Site/external.css
+++ b/Site/external.css
@@ -9,7 +9,7 @@ body{
 h1{
 	font-family: Brush Script MT;
 	text-align: center;
-	font-size: 80px;
+	font-size: 55px;
 }
 
 #pink{
@@ -19,6 +19,8 @@ h1{
 
 }
 
-#center{
-	text-align: center;
+.navbar-brand a:hover, .navbar-brand a:focus {
+	text-decoration: none;
 }
+
+
